--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ git:
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
 
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=julienudev_ipi-java-350-ex -Dsonar.branch.name=evaluation
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=julienudev_ipi-java-350-ex
 
